sticky-notes-complited

--- a/ChallangeWeek02/StickyNotes/index.html
+++ b/ChallangeWeek02/StickyNotes/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -12,24 +13,23 @@
         <div class="inner_modal">
         <div class="header">
           <div class="header_left">
+            <i class="fas fa-sticky-note"></i>
             <h1>
-                <i></i>
                 Sticky Notes
             </h1>
           </div>
           <div class="header_right">
             <div class="add_button">
-                <p>Add Note</p>
+                <button class="btn">Add Note</button>
             </div>
         </div>
         </div>
         <div class="note_box">
-            <div class="icon">
-
-            </div>
             <textarea placeholder="Note..." name="" id="" ></textarea>
+            <i class="far fa-times-circle"></i>
         </div>
         </div>
     </section>
+    <script src="js/app.js"></script>
 </body>
 </html>
